--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,16 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to my app!</h1>
+    <p>
+        Doing it to refresh my knowledge with the latest dotnet.<br />
+        I'm going to add some features to this app:
+    <ul class="list-group">
+        <li>add a feature to create tasks lists</li>
+        <li>add a feature to create tasks</li>
+        <li>add a feature to mark tasks as done</li>
+        <li>add a feature to delete tasks</li>
+        <li>add a feature to delete tasks lists</li>
+    </ul>
+    </p>
 </div>
