--- a/ToDoList/Views/Todo/Index.cshtml
+++ b/ToDoList/Views/Todo/Index.cshtml
@@ -15,7 +15,7 @@
 <h1>List of tasks</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
 
 <form asp-controller="Todo" asp-action="Index">
@@ -69,6 +69,15 @@
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                    @if (!item.IsDone)
+                    {
+                        <form asp-action="MarkCompleted" asp-route-id="@item.Id" method="post" style="display:inline">
+                            <button type="submit" class="btn btn-success btn-sm">
+                                <i class="bi bi-check-circle"></i> Mark Completed
+                            </button>
+                        </form>
+                    }
                 </td>
             </tr>
         }
@@ -120,6 +129,15 @@
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                    @if (!item.IsDone)
+                    {
+                        <form asp-action="MarkCompleted" asp-route-id="@item.Id" method="post" style="display:inline">
+                            <button type="submit" class="btn btn-success btn-sm">
+                                <i class="bi bi-check-circle"></i> Mark Completed
+                            </button>
+                        </form>
+                    }
                 </td>
             </tr>
         }
