Enable adding new task to task list

--- a/ToDoList/Views/TasksLists/Index.cshtml
+++ b/ToDoList/Views/TasksLists/Index.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<ToDoList.Models.TasksList>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "List of tasks list";
 }
 
 <h1>List of tasks lists</h1>
