--- a/ToDoList/Views/Todo/Index.cshtml
+++ b/ToDoList/Views/Todo/Index.cshtml
@@ -1,15 +1,15 @@
 <!-- POTENTIAL IMPROVEMENTS: 
 1) add a button to show/hide completed tasks
 2) make asynchronus updates to the list
-3) add a button to mark a task as completed
-4) add search functionality
+3) add a button to mark a task as completed (V)
+4) add search functionality (V)
 5) add a button to delete all completed tasks
 -->
 
 @model IEnumerable<ToDoList.Models.Todo>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Tasks";
 }
 
 <h1>List of tasks</h1>
