--- a/ToDoList/Views/Todo/Create.cshtml
+++ b/ToDoList/Views/Todo/Create.cshtml
@@ -1,41 +1,46 @@
 @model ToDoList.Models.Todo
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Todo";
 }
 
-<h1>Create</h1>
+<h1>Create Todo</h1>
 
-<h4>Todo</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            
+            <div class="form-group mb-3">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+            
+            <div class="form-group mb-3">
+                <label asp-for="DueDate" class="control-label"></label>
+                <input asp-for="DueDate" class="form-control" type="date" />
+                <span asp-validation-for="DueDate" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group mb-3 form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsDone" /> @Html.DisplayNameFor(model => model.IsDone)
                 </label>
             </div>
-            <div class="form-group">
-                <label asp-for="DueDate" class="control-label"></label>
-                <input asp-for="DueDate" class="form-control" />
-                <span asp-validation-for="DueDate" class="text-danger"></span>
+            
+            <div class="form-group mb-3">
+                <label class="control-label">List</label>
+                <select asp-for="TasksListId" class="form-control" 
+                        asp-items="ViewBag.TasksLists"></select>
             </div>
-            <div class="form-group">
+            
+            <div class="form-group mb-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-outline-secondary">Back to List</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
