--- a/ToDoList/Views/TasksLists/Details.cshtml
+++ b/ToDoList/Views/TasksLists/Details.cshtml
@@ -10,22 +10,22 @@
     <h4>Tasks list</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CreatedAt)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UpdatedAt)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UpdatedAt)
         </dd>
     </dl>
@@ -35,54 +35,7 @@
     
     @if (Model.Todos != null && Model.Todos.Any())
     {
-        <table class="table">
-            <thead>
-                <!-- TODO: get DisplayNames from model --->
-                <tr>
-                    <th>Description</th>
-                    <th>Status</th>
-                    <th>Due Date</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var todo in Model.Todos)
-                {
-                    <tr class="@(todo.IsDone ? "table-success" : "")">
-                        <td>@todo.Description</td>
-                        <td>
-                            @if (todo.IsDone)
-                            {
-                                <span class="badge bg-success">Completed</span>
-                            }
-                            else
-                            {
-                                <span class="badge bg-warning">Pending</span>
-                            }
-                        </td>
-                        <td>@todo.DueDate?.ToString("yyyy-MM-dd")</td>
-                        <td>
-                            <div class="btn-group">
-                                <a asp-controller="Todo" asp-action="Edit" asp-route-id="@todo.Id" class="btn btn-sm btn-primary">
-                                    <i class="bi bi-pencil"></i> Edit
-                                </a>
-                                @if (!todo.IsDone)
-                                {
-                                    <form asp-controller="Todo" asp-action="MarkCompleted" asp-route-id="@todo.Id" method="post" style="display:inline">
-                                        <button type="submit" class="btn btn-sm btn-success">
-                                            <i class="bi bi-check-circle"></i> Complete
-                                        </button>
-                                    </form>
-                                }
-                                <a asp-controller="Todo" asp-action="Delete" asp-route-id="@todo.Id" class="btn btn-sm btn-danger">
-                                    <i class="bi bi-trash"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        <partial name="_TodoTable" model="Model.Todos" />
         
         <div class="mt-3">
             <a asp-controller="Todo" asp-action="Create" asp-route-tasksListId="@Model.Id" class="btn btn-primary">
