--- a/ToDoList/Views/Todo/Index.cshtml
+++ b/ToDoList/Views/Todo/Index.cshtml
@@ -16,7 +16,7 @@
 
 <h1>Tasks</h1>
 
-<form asp-controller="Todo" asp-action="Index" method="=" class="mb-4">
+<form asp-controller="Todo" asp-action="Index" method="get" class="mb-4">
     <div class="input-group">
         <input type="text" class="form-control" name="SearchString" placeholder="Search by description..." />
         <button class="btn btn-outline-secondary" type="submit">
